--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nadir-syntax",
   "theme": "syntax",
   "version": "0.0.1",
-  "description": "Nadir the dark monochrome fork for Apex",
+  "description": "Nadir the dark monochrome fork of Apex",
   "keywords": [
     "nadir",
     "monochrome",
